# mio-namedpipe-rs

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
src/: main.rs
